# containment-chamber

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
containment_chamber/: __init__.py  __main__.py  main.py
containment_chamber/templates/: .gitignore  pyproject.toml
irongrip/: main.py
redalert/: main.py
stubs/hypothesis/: __init__.pyi
stubs/hypothesis/strategies/: __init__.pyi
tests/: __init__.py  test_main.py
