[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "irongrip"
dynamic = ["version"]
description = "A tool for irongrip functionality"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Mockapapella"},
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Mockapapella/irongrip"
Repository = "https://github.com/Mockapapella/irongrip"
Issues = "https://github.com/Mockapapella/irongrip/issues"

[project.scripts]
irongrip = "irongrip.main:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "irongrip/_version.py"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
]

[tool.hatch.build]
include = [
    "irongrip/**/*.py",
    "README.md",
    "LICENSE",
]